--- a/crop/index.html
+++ b/crop/index.html
@@ -24,7 +24,9 @@
   </head>
   <body>
     <div class="box-wrapper">
-      <canvas id="box"></canvas>
+      <canvas id="box">
+        Canvas not support
+      </canvas>
     </div>
     <div class="list-wrapper">
       <ul class="list-ul">
