--- a/crop/demo/index.html
+++ b/crop/demo/index.html
@@ -37,8 +37,8 @@
     }
     .clip-box .clip-circle {
       position: absolute;
-      width: 4px;
-      height: 4px;
+      width: 6px;
+      height: 6px;
       border-radius: 50%;
       z-index: 103;
       background-color: #256ea8;
@@ -46,20 +46,20 @@
     }
 
     .clip-box .clip-circle:first-child {
-      top: -2px;
-      left: -2px;
+      top: -3px;
+      left: -3px;
     }
     .clip-box .clip-circle:nth-child(2) {
-      top: -2px;
-      right: -2px;
+      top: -3px;
+      right: -3px;
     }
     .clip-box .clip-circle:nth-child(3) {
-      bottom: -2px;
-      right: -2px;
+      bottom: -3px;
+      right: -3px;
     }
     .clip-box .clip-circle:nth-child(4) {
-      bottom: -2px;
-      left: -2px;
+      bottom: -3px;
+      left: -3px;
     }
     .wrapper-mask {
       position: absolute;
@@ -70,6 +70,7 @@
       background-color: #333;
       opacity: .3;
       z-index: 101;
+      background-size: cover;
       display: none;
     }
   </style>
