--- a/crop/demo/index.html
+++ b/crop/demo/index.html
@@ -73,6 +73,10 @@
       background-size: cover;
       display: none;
     }
+
+    #canvas {
+      filter: blur(5px)
+    }
   </style>
   <body>
     <ul class="op-ul">
